--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2060,7 +2060,7 @@ a {
   position: fixed;
   padding-top: 12rem;
   height: calc(100% - 60rem);
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
@@ -3188,7 +3188,7 @@ p.overview__love-stat-timer {
     position: absolute;
     left: initial;
     right: 0;
-    bottom: 90rem;
+    bottom: 130rem;
     width: 510rem;
   }
   .overview__stickers-close-overlay {
