--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -187,6 +187,8 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 .mainwrapper {
   width: 100%;
