--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2719,6 +2719,7 @@ p.overview__love-stat-timer {
 
 .overview__chat-messages {
   padding: 12rem;
+  padding-bottom: 44rem;
   overflow-y: auto;
   height: calc(100vh - 157rem);
   display: flex;
