--- a/player/templates/player/redesign/lists/skill_top.html
+++ b/player/templates/player/redesign/lists/skill_top.html
@@ -58,19 +58,19 @@
 
     </div>
 
-    <div class="tlist__tab-container">
+    <div class="tlist__tab-container custom-scroll">
       <!--СПИСОК 1-->
-      <div class="tlist__tab custom-scroll active">
+      <div class="tlist__tab active">
         {% power_top request player %}
       </div>
 
       <!--СПИСОК 2-->
-      <div class="tlist__tab custom-scroll">
+      <div class="tlist__tab">
         {% knowledge_top request player %}
       </div>
 
       <!--СПИСОК 3-->
-      <div class="tlist__tab custom-scroll">
+      <div class="tlist__tab">
         {% endurance_top request player %}
       </div>
     </div>
