--- a/player/templates/player/redesign/lists/universal_list.html
+++ b/player/templates/player/redesign/lists/universal_list.html
@@ -14,7 +14,7 @@
 {% block content %}
 <main>
 
-  <section class="earn">
+  <section class="earn custom-scroll">
 
 		<!--Блок таблицы-->
     <div class="ct__js-table-container" id="js-ct-table-1">
