--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -1,6 +1,7 @@
 {% extends 'player/redesign/header.html' %}
 {% load l10n %}{% load i18n %}
 {% load floor_to_tens %}
+{% load dict_key %}
 {% load static %}
 {% load tz %}
 {% block content %}
@@ -254,8 +255,9 @@
      });
  }
      bounds = new L.LatLngBounds(new L.LatLng(90, 200), new L.LatLng(-90, -200));
-
-     var mymap = L.map('mapid', { zoomControl: false, maxBounds: bounds, maxBoundsViscosity: 1.0, minZoom: 2 }).setView([{{ player.region.latitude }}, {{ player.region.longitude }}], {{ player.region.zoom }});
+        {% with map_shape=shapes_dict|dict_key:player.region.pk %}
+     var mymap = L.map('mapid', { zoomControl: false, maxBounds: bounds, maxBoundsViscosity: 1.0, minZoom: 2 }).setView([{{ player.region.latitude }}, {{ player.region.longitude }}], {{ map_shape.zoom }});
+       {% endwith %}
      L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
      attribution: '',
      minZoom: 2,
@@ -269,6 +271,7 @@
 <!--  L.polyline(latlngs[0].concat(latlngs[0][0])).addTo(mymap);-->
 
  {% for district in regions %}
+  {% with map_shape=shapes_dict|dict_key:district.pk %}
  var region = [
    {
        "type": "Feature",
@@ -277,7 +280,7 @@
        },
        "geometry": {
            "type": "Polygon",
-           "coordinates": {{ district.shape }}
+           "coordinates": {{ map_shape.shape }}
        }
    },
  ];
@@ -292,12 +295,12 @@
          };
      },
      data:{
-          "id": "{{ district.on_map_id }}",
+          "id": "{{ map_shape.on_map_id }}",
        },
  }){% if not district.is_off %}.on('click', get_district_info){% endif %};
 
  region_poly_{{ district.pk }}.addTo(mymap);
-
+ {% endwith %}
  {% endfor %}
  </script>
 {% endblock %}
