возвращение имени на карте в регион

--- a/region/templates/region/map.html
+++ b/region/templates/region/map.html
@@ -118,7 +118,7 @@
          };
      },
      data:{
-          "id": "{{ map_shape.on_map_id }}",
+          "id": "{{ district.on_map_id }}",
        },
  }){% if not district.is_off %}.on('click', get_district_info){% endif %};
 
