--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3209,9 +3209,10 @@ p.overview__love-stat-timer {
     margin-bottom: 30rem;
   }
   .overview__chat-message-body p.moder {
-    width: 100%;
+    width: 375rem;
     flex-grow: 1;
     word-wrap: break-word;
+    word-break: break-all;
   }
   .overview__line {
     display: none;
