--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3188,7 +3188,7 @@ p.overview__love-stat-timer {
     height: 30rem;
   }
   .overview__chat-message-body p {
-    width: 100%;
+    width: 360rem;
     font-size: 16rem;
     word-wrap: break-word;
   }
@@ -3212,7 +3212,6 @@ p.overview__love-stat-timer {
     width: 375rem;
     flex-grow: 1;
     word-wrap: break-word;
-    word-break: break-all;
   }
   .overview__line {
     display: none;
