--- a/bill/templates/state/gov/bills/change_coat.html
+++ b/bill/templates/state/gov/bills/change_coat.html
@@ -30,7 +30,7 @@
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
-            <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
+            <a href='/profile/{% localize off %}{{ bill.initiator.pk }}{% endlocalize %}' target="_blank">{{ bill.initiator }}</a>
         </div>
         <div class="row" style="margin-top: 15px">
             {% with player=data|dict_key:'player' %}
