--- a/bill/templates/state/gov/reviewed/change_taxes.html
+++ b/bill/templates/state/gov/reviewed/change_taxes.html
@@ -6,6 +6,7 @@
 {% load get_key_list %}
 {% load static %}
 {% load tz %}
+{% load l10n %}{% load i18n %}
 
 <div class="row bill_row" style="margin-top: 25px">
     {% with title=data|dict_key:'title' %}
@@ -46,7 +47,7 @@
         </div>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-    <a href='/profile/{{ bill.initiator.pk }}' target="_blank">{{ bill.initiator }}</a>
+    <a href='/profile/{% localize off %}{{ bill.initiator.pk }}{% endlocalize %}' target="_blank">{{ bill.initiator }}</a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
