--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -50,7 +50,7 @@
                             </a>
                         </div>
                         <div class="col-xs-8 col-sm-8 col-md-8">
-                            <a href='/profile/{{ candidate.pk }}' target="_blank">
+                            <a href='/profile/{% localize off %}{{ candidate.pk }}{% endlocalize %}' target="_blank">
                                 <h3>{{ candidate.nickname }}</h3>
                             </a>
                         </div>
