--- a/player/templates/lists/world_players_list.html
+++ b/player/templates/lists/world_players_list.html
@@ -3,6 +3,8 @@
 {% load dict_key %}
 {% load pagination %}
 {% block content %}
+{% load tz %}
+{% load l10n %}{% load i18n %}
 <div id="over" class="tabcontent">
         <div class="row">
             <div class="col-xs-2 col-sm-2 col-md-2">
@@ -19,7 +21,7 @@
                                 {% for character in lines %}
                                  <div class="row">
                                     <div class="col-xs-2 col-sm-2 col-md-2">
-                                        <a href='/profile/{{ character.pk }}' target="_blank">
+                                        <a href='/profile/{% localize off %}{{ character.pk }}{% endlocalize %}' target="_blank">
                                             <!--если пользователь загрузил аватарку-->
                                             {% if character.image %}
                                             <img src="{{ character.image.url }}" width="50" height="50" align="right">
@@ -29,7 +31,7 @@
                                         </a>
                                     </div>
                                     <div class="col-xs-4 col-sm-4 col-md-4">
-                                        <a href='/profile/{{ character.pk }}' target="_blank">
+                                        <a href='/profile/{% localize off %}{{ character.pk }}{% endlocalize %}' target="_blank">
                                             <h3>{{ character.nickname }}</h3>
                                         </a>
                                     </div>
