--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -225,7 +225,7 @@
 					<h2 class="ct__s-title">{% trans 'партия' %}</h2>
 					<p class="ct__s-text">
 						{% if player.party %}{{ player.party.title }}{% else %}{% trans 'беспартийный' %}{% endif %}
-						<a href="/party_history/{{ player.pk }}/">
+						<a href="/party_history/{% localize off %}{{ player.pk }}{% endlocalize %}/">
 							{% trans '(история)' context "profile" %}
 						</a>
 					</p>
