--- a/gov/templates/state/gov/forms/foreign_right.html
+++ b/gov/templates/state/gov/forms/foreign_right.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3">
                 <h3>
-                    <a href='/profile/{% localize off %{{ request.char.pk }}{% endlocalize %}' target="_blank">{{ request.char.nickname }}</a>
+                    <a href='/profile/{% localize off %}{{ request.char.pk }}{% endlocalize %}' target="_blank">{{ request.char.nickname }}</a>
                 </h3>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2">
